correct nuevo logo, add chevron to nav item, add collapse item component for homepage

--- a/src/assets/stylesheets/Home.css
+++ b/src/assets/stylesheets/Home.css
@@ -1,6 +1,6 @@
 .main-title {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 36px;
-    font-weight: normal;
-    color:#ffffff;
+    font-weight: black;
+    color:#000000;
 }  
